[package]
name = "dext"
version = "0.1.2"
edition = "2021"
authors = ["Ryan Thomas <ryan@ryant.org>"]
license = "GPL-3.0"
repository = "https://github.com/rthomas/docker_extract"
description = "A CLI tool to extract and unpack the layers of a docker image."

[dependencies]
anyhow = "1.0.66"
bollard = "0.13.0"
env_logger = "0.9.1"
futures-util = "0.3.25"
log = "0.4.17"
serde = "1.0.147"
serde_json = "1.0.87"
structopt = { version = "0.3.26", features = ["color"] }
tar = "0.4.38"
tempdir = "0.3.7"
tokio = { version = "1.21.2", features = ["full"] }
